--- a/index.html
+++ b/index.html
@@ -109,20 +109,27 @@
                 alt="Design Portfolio"
                 class="project-img"
               />
-              <div class="project-content-text">
-                <h3>Design Portfolio</h3>
-                <div class="project-content-link">
-                  <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                  </ul>
-                </div>
-                <div class="project-code">
-                  <ul>
-                    <li><a href="#">View Project</a></li>
-                    <li><a href="#">View Code</a></li>
-                  </ul>
-                </div>
+              <div class="image-overlay"></div>
+              <div class="img-link">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-content-text">
+              <h3>Design Portfolio</h3>
+              <div class="project-content-link">
+                <ul>
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                </ul>
+              </div>
+              <div class="project-code">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -133,20 +140,27 @@
                 alt=" E-learning landing page"
                 class="project-img"
               />
-              <div class="project-content-text">
-                <h3>Design Portfolio</h3>
-                <div class="project-content-link">
-                  <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                  </ul>
-                </div>
-                <div class="project-code">
-                  <ul>
-                    <li><a href="#">View Project</a></li>
-                    <li><a href="#">View Code</a></li>
-                  </ul>
-                </div>
+              <div class="image-overlay"></div>
+              <div class="img-link">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-content-text">
+              <h3>Design Portfolio</h3>
+              <div class="project-content-link">
+                <ul>
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                </ul>
+              </div>
+              <div class="project-code">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -157,21 +171,28 @@
                 alt="Todo web app"
                 class="project-img"
               />
-              <div class="project-content-text">
-                <h3>Design Portfolio</h3>
-                <div class="project-content-link">
-                  <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                  </ul>
-                </div>
-                <div class="project-code">
-                  <ul>
-                    <li><a href="#">View Project</a></li>
-                    <li><a href="#">View Code</a></li>
-                  </ul>
-                </div>
+              <div class="image-overlay"></div>
+              <div class="img-link">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-content-text">
+              <h3>Design Portfolio</h3>
+              <div class="project-content-link">
+                <ul>
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                </ul>
+              </div>
+              <div class="project-code">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -182,21 +203,28 @@
                 src="/assets/images/thumbnail-project-4-large.webp"
                 alt="Entertainment web app"
               />
-              <div class="project-content-text">
-                <h3>Design Portfolio</h3>
-                <div class="project-content-link">
-                  <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                  </ul>
-                </div>
-                <div class="project-code">
-                  <ul>
-                    <li><a href="#">View Project</a></li>
-                    <li><a href="#">View Code</a></li>
-                  </ul>
-                </div>
+              <div class="image-overlay"></div>
+              <div class="img-link">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-content-text">
+              <h3>Design Portfolio</h3>
+              <div class="project-content-link">
+                <ul>
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                </ul>
+              </div>
+              <div class="project-code">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -207,21 +235,28 @@
                 alt=" Memory Game"
                 class="project-img"
               />
-              <div class="project-content-text">
-                <h3>Design Portfolio</h3>
-                <div class="project-content-link">
-                  <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                  </ul>
-                </div>
-                <div class="project-code">
-                  <ul>
-                    <li><a href="#">View Project</a></li>
-                    <li><a href="#">View Code</a></li>
-                  </ul>
-                </div>
+              <div class="image-overlay"></div>
+              <div class="img-link">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-content-text">
+              <h3>Design Portfolio</h3>
+              <div class="project-content-link">
+                <ul>
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                </ul>
+              </div>
+              <div class="project-code">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
               </div>
             </div>
           </div>
@@ -232,21 +267,28 @@
                 alt="Art gallery showcase"
                 class="project-img"
               />
-              <div class="project-content-text">
-                <h3>Design Portfolio</h3>
-                <div class="project-content-link">
-                  <ul>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
-                    <li><a href="#">JavaScript</a></li>
-                  </ul>
-                </div>
-                <div class="project-code">
-                  <ul>
-                    <li><a href="#">View Project</a></li>
-                    <li><a href="#">View Code</a></li>
-                  </ul>
-                </div>
+              <div class="image-overlay"></div>
+              <div class="img-link">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="project-content-text">
+              <h3>Design Portfolio</h3>
+              <div class="project-content-link">
+                <ul>
+                  <li><a href="#">HTML</a></li>
+                  <li><a href="#">CSS</a></li>
+                  <li><a href="#">JavaScript</a></li>
+                </ul>
+              </div>
+              <div class="project-code">
+                <ul>
+                  <li><a href="#">View Project</a></li>
+                  <li><a href="#">View Code</a></li>
+                </ul>
               </div>
             </div>
           </div>
