--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
               </div>
             </div>
             <div class="project-content-text">
-              <h3>Design Portfolio</h3>
+              <h3>E-LEARNING LANDING PAGE</h3>
               <div class="project-content-link">
                 <ul>
                   <li><a href="#">HTML</a></li>
@@ -180,7 +180,7 @@
               </div>
             </div>
             <div class="project-content-text">
-              <h3>Design Portfolio</h3>
+              <h3>TODO WEB APP</h3>
               <div class="project-content-link">
                 <ul>
                   <li><a href="#">HTML</a></li>
@@ -212,7 +212,7 @@
               </div>
             </div>
             <div class="project-content-text">
-              <h3>Design Portfolio</h3>
+              <h3>ENTERTAINMENT WEB APP</h3>
               <div class="project-content-link">
                 <ul>
                   <li><a href="#">HTML</a></li>
@@ -244,7 +244,7 @@
               </div>
             </div>
             <div class="project-content-text">
-              <h3>Design Portfolio</h3>
+              <h3>MEMORY GAME</h3>
               <div class="project-content-link">
                 <ul>
                   <li><a href="#">HTML</a></li>
@@ -276,7 +276,7 @@
               </div>
             </div>
             <div class="project-content-text">
-              <h3>Design Portfolio</h3>
+              <h3>ART GALLERY SHOWCASE</h3>
               <div class="project-content-link">
                 <ul>
                   <li><a href="#">HTML</a></li>
